HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/NonModalImplementsModalClass/Source/Main.uv
//! Rejected polymorphism specimen for a non-modal type implementing a modal class.

internal class ModalOnlyClass {
    internal @Ready {
        value: i32
    }
}

internal record NonModalImplementation <: ModalOnlyClass {
    internal value: i32
}
